--- a/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
@@ -10,6 +10,7 @@
         [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']"
         [value]="1"
         [hasManualActivation]="true"
+        [ariaLabel]="'Simple tablist example'"
         (valueOnChange)="logValue('Tabs', $event.detail.value)"
       ></elvia-tabs>
     </div>
