--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-generator/ceg-filters/ceg-filters.component.html
@@ -37,6 +37,7 @@
         'ceg-filter-margin': i !== formGroupList.length - 1
       }"
     >
+      <label class="e-form-field__label" *ngIf="formGroup.displayGroup">{{ formGroup.displayGroup }}</label>
       <label class="e-toggle" role="switch">
         {{ formGroup.label }}
         <input
