--- a/packages/components/components/elvis-tabs/src/react/style.scss
+++ b/packages/components/components/elvis-tabs/src/react/style.scss
@@ -5,14 +5,19 @@ $grey-80: #515151;
 $grey-90: #3b3b3b;
 $hover-blue: #0064fa;
 $icon-btn-width: 24px;
-$tabs-height: 44px;
+$tabs-line-height: 20px;
+$tabs-label-padding-bottom: 8px;
+$tabs-underline-height: 4px;
+$tabs-focus-padding: 4px;
+$tabs-height: $tabs-line-height + $tabs-label-padding-bottom + $tabs-underline-height;
+$tabs-height-with-focus: calc($tabs-height + ($tabs-focus-padding * 2));
 
 %underline {
   content: '';
   position: absolute;
-  height: 3px;
+  height: 4px;
   bottom: 0px;
-  top: 28px;
+  top: $tabs-line-height + $tabs-label-padding-bottom;
   left: 0px;
   border-radius: 50px;
 }
@@ -28,7 +33,7 @@ $tabs-height: 44px;
   align-items: center;
   overflow: hidden;
   position: relative;
-  height: $tabs-height;
+  height: $tabs-height-with-focus;
   &,
   * {
     box-sizing: border-box;
@@ -37,7 +42,7 @@ $tabs-height: 44px;
   &__arrow {
     position: absolute;
     width: 8px;
-    height: $tabs-height - (16px * 2);
+    height: $tabs-height-with-focus - (16px * 2);
     z-index: 10;
     transition: visibility 0.5s ease-in;
     box-sizing: content-box;
@@ -78,7 +83,6 @@ $tabs-height: 44px;
     -webkit-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    height: $tabs-height;
 
     &.right-arrow-fade {
       -webkit-mask: linear-gradient(to left, transparent 0%, $black-fade);
@@ -112,8 +116,8 @@ $tabs-height: 44px;
     white-space: nowrap;
     width: 100%;
     overflow-x: auto;
-    padding: 4px;
-    height: $tabs-height;
+    padding: $tabs-focus-padding;
+    height: $tabs-height-with-focus;
     -ms-overflow-style: none;
     scrollbar-width: none;
     &::-webkit-scrollbar {
@@ -122,20 +126,17 @@ $tabs-height: 44px;
   }
 
   &__item {
+    border: 0;
+    padding: 0;
+    background: transparent;
+    &:focus {
+      outline: 2px solid $hover-blue;
+      outline-offset: 2px;
+    }
     &:not(:last-of-type) {
       margin-right: 24px;
       @media screen and (max-width: 767px) {
         margin-right: 16px;
-      }
-    }
-
-    // Hiding radiobutton and adding focus
-    input {
-      position: absolute;
-      opacity: 0;
-      &:focus ~ label {
-        outline: 2px solid $hover-blue;
-        outline-offset: 2px;
       }
     }
 
@@ -144,17 +145,17 @@ $tabs-height: 44px;
       font-style: normal;
       font-weight: normal;
       font-size: 14px;
-      line-height: 21px;
+      line-height: $tabs-line-height;
       letter-spacing: 0.8px;
       text-transform: uppercase;
       color: $grey-80;
 
-      display: inline-block;
+      display: block;
       position: relative;
       border: none;
       padding: 0px 8px;
-      padding-bottom: 11px;
       background: transparent;
+      height: $tabs-height;
 
       // Underline
       &::before {
