fix toggle outline

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -6928,6 +6928,9 @@ input:focus {
   outline-offset: 2px;
 }
 .e-toggle input:focus.e-toggle__input {
+  outline: none;
+}
+.e-toggle input:focus.e-toggle__input::before {
   outline: 2px solid #0064fa;
   outline-offset: 2px;
 }
