update elvis, fix toggle doc

--- a/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/toggle-doc/toggle-doc.component.html
@@ -26,7 +26,7 @@
         [interactable]="false"
         [codeHTML]="example1"
         [codeInverted]="exampleInverted"
-        [showIframeScreens]="true"
+        [showIframeScreens]="false"
         [noTablet]="true"
       ></app-component-example-v1>
     </ng-container>
