--- a/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
@@ -6,13 +6,11 @@
     <h3>Test your component here</h3>
     <!--Normal version-->
     <div class="e-bg-white">
-      <elvia-tabs
-        [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']"
-        [value]="1"
-        [hasManualActivation]="true"
-        [ariaLabel]="'Simple tablist example'"
-        (valueOnChange)="logValue('Tabs', $event.detail.value)"
-      ></elvia-tabs>
+      <elvia-datepicker
+        [isRequired]="true"
+        (errorOnChange)="datepickerOnError($event.detail.value)"
+        [hasClearButton]="true"
+      ></elvia-datepicker>
     </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
