--- a/packages/elvis/src/components/form/toggle.scss
+++ b/packages/elvis/src/components/form/toggle.scss
@@ -88,8 +88,11 @@ $toggle-inverted-slider-padding: calc((#{$toggle-inverted-height} - #{$toggle-sl
   &.e-toggle---focus input.e-toggle__input {
     @include outline.e-outline-pseudoclass();
   }
-  input:focus.e-toggle__input {
-    @include outline.e-outline();
+  input:focus-visible.e-toggle__input {
+    outline: none;
+    &::before {
+      @include outline.e-outline();
+    }
   }
 
   // Disabled
