--- a/packages/components/components/elvis-popover/src/react/style.scss
+++ b/packages/components/components/elvis-popover/src/react/style.scss
@@ -3,6 +3,7 @@ $popover-padding: 32px;
 $popover-button-offset: -30px;
 $popover-box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.08);
 $green: #29d305;
+$grey-05: #f4f4f4;
 
 .ewc-no-outline,
 .ewc-no-outline * {
@@ -13,6 +14,15 @@ $green: #29d305;
   display: flex;
   box-sizing: border-box;
   position: relative;
+
+  &__backdrop {
+    z-index: 100;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+  }
 
   &__trigger {
     display: flex;
@@ -28,22 +38,13 @@ $green: #29d305;
   }
   &:not(.ewc-popover--hide) {
     .ewc-popover__trigger {
-      z-index: 100;
+      z-index: 110;
     }
-  }
-
-  &__backdrop {
-    z-index: 100;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
   }
 
   &__fixed-content-area {
     position: fixed;
-    z-index: 100;
+    z-index: 101;
 
     .ewc-popover__contentContainer {
       height: 100%;
@@ -72,7 +73,7 @@ $green: #29d305;
     width: max-content;
     left: 50%;
     opacity: 1;
-    z-index: 101;
+    z-index: 111;
     pointer-events: all;
     padding: $popover-padding;
     background-color: white;
@@ -104,6 +105,42 @@ $green: #29d305;
       font-weight: normal;
       font-size: 14px;
       line-height: 22px;
+    }
+
+    .ewc-popover__list {
+      min-width: 216px;
+      background: white;
+      border-radius: 4px;
+
+      &-item {
+        background: white;
+        padding: 16px 10px;
+        border: none;
+
+        //styleName: TEXT/Medium;
+        font-family: 'Red Hat Text', Verdana, sans-serif;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px;
+        letter-spacing: 0px;
+        text-align: left;
+        text-transform: capitalize;
+
+        &:first-of-type {
+          border-top-left-radius: 4px;
+          border-top-right-radius: 4px;
+        }
+        &:last-of-type {
+          border-bottom-left-radius: 4px;
+          border-bottom-right-radius: 4px;
+        }
+
+        &:hover {
+          cursor: pointer;
+          background: $grey-05;
+        }
+      }
     }
   }
 
