datepicker input now not selectable

--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -99,6 +99,7 @@ $datepicker-max-width: 448px;
       &::placeholder {
         opacity: 1;
         color: $text-placeholder;
+        user-select: none;
       }
     }
 
