--- a/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
@@ -5,13 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-datepicker
-        [isRequired]="true"
-        (errorOnChange)="datepickerOnError($event.detail.value)"
-        [hasClearButton]="true"
-      ></elvia-datepicker>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
