--- a/packages/components/components/elvis-datepicker/src/react/style.scss
+++ b/packages/components/components/elvis-datepicker/src/react/style.scss
@@ -99,6 +99,7 @@ $datepicker-max-width: 448px;
       &::placeholder {
         opacity: 1;
         color: $text-placeholder;
+        user-select: none;
       }
     }
 
@@ -314,6 +315,31 @@ $datepicker-max-width: 448px;
       &.Mui-focusVisible {
         @extend %ewc-outline;
       }
+    }
+    &-clear {
+      background: none;
+      color: inherit;
+      border: none;
+      padding: 0;
+
+      display: flex;
+      align-items: center;
+      position: absolute;
+      z-index: 1;
+      right: 24px;
+      bottom: 16px;
+
+      border-bottom: 2.5px solid transparent;
+      border-radius: 0;
+      cursor: pointer;
+
+      font-family: $red-hat-display;
+      font-size: 14px;
+      line-height: 115%;
+      font-weight: 500;
+    }
+    &-clear:hover {
+      border-color: $green;
     }
   }
 
