--- a/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/doc-pages/dev/v2-playground/v2-playground.component.html
@@ -5,15 +5,7 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-tabs
-        [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']"
-        [value]="1"
-        [hasManualActivation]="true"
-        [ariaLabel]="'Simple tablist example'"
-        (valueOnChange)="logValue('Tabs', $event.detail.value)"
-      ></elvia-tabs>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
