--- a/packages/web/src/app/doc-pages/components/forms/radiobutton-doc/radiobutton-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/radiobutton-doc/radiobutton-doc.component.html
@@ -1,6 +1,6 @@
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl">
-  <ng-container ngProjectAs="headerTitle">Radiobutton</ng-container>
+  <ng-container ngProjectAs="headerTitle">Radio Button</ng-container>
   <ng-container ngProjectAs="headerDescription">
     {{ description }}
   </ng-container>
