--- a/packages/web/src/app/doc-pages/components/forms/search-doc/search-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/forms/search-doc/search-doc.component.html
@@ -40,7 +40,8 @@
   <app-component-section [sectionTitle]="'Type'">
     <ng-container ngProjectAs="sectionContent">
       We have two types of search: instant and on submit. These are typically used in connection to a data
-      table or list.
+      table or list. Instant search is typically used when filtering among content, while search on submit is
+      for typical search functions (when content isn’t displayed before searching).
       <app-component-subsection [sectionTitle]="'Instant'">
         <ng-container ngProjectAs="sectionContent">
           For use cases were the search result should appear "instant".
