aria hidden on icons

--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -69,11 +69,11 @@
                 "
               >
                 <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   Black ({{ item.contrastBlack }})
                 </div>
                 <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
@@ -157,11 +157,11 @@
                 "
               >
                 <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   Black ({{ item.contrastBlack }})
                 </div>
                 <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
@@ -247,11 +247,11 @@
                 "
               >
                 <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   Black ({{ item.contrastBlack }})
                 </div>
                 <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
@@ -335,11 +335,11 @@
                 "
               >
                 <div *ngIf="item.contrastBlack !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   Black ({{ item.contrastBlack }})
                 </div>
                 <div *ngIf="item.contrastWhite !== ''">
-                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs"></i>
+                  <i class="e-icon e-icon--check_circle-filled-color e-icon--xs" aria-hidden="true"></i>
                   White ({{ item.contrastWhite }})
                 </div>
               </div>
